<resources>
    <string name="app_name">Cori+</string>
    <string name="action_settings">Settings</string>
    <string name="action_create">Create a status</string>
    <string name="status_placeholder">What\'s up?</string>
    <string name="status_pretext">Your text</string>
    <string name="post_message">Post</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="networking_header">Networking</string>
    <string name="host_title">Use host</string>
    <string name="privacy_header">Privacy</string>
    <string name="default_privacy_title">Default message privacy</string>
    <string name="unset_host">To start using Cori+, please set the host to use in Settings.</string>
    <string name="action_feed">Show feed</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="action_logout">Sign out</string>
    <string name="feed_error">Couldn\'t refresh feed</string>
    <string name="action_profile">My profile</string>
    <string name="network_request_failed">Could not make network request. Try again later.</string>
    <string name="title_activity_profile">Profile info</string>
    <string name="action_refresh">Refresh</string>
    <string name="profile_missing">This profile does not exist</string>
    <string name="search_hint">Search for profiles</string>
    <string name="action_search">Search</string>
    <string name="followers_text">followers</string>
    <string name="following_text">following</string>
    <string name="messages_text">messages</string>
    <string name="edit_profile">Edit profile</string>
    <string name="action_follow">Follow</string>
    <string name="action_following">Following</string>
    <string name="upload_image_denied">In order to upload images, you must grant storage permission.</string>
    <string name="leaving_create">Are you sure you want to discard this?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_report">Report</string>
    <string name="field_biography">Bio</string>
    <string name="field_website">Website</string>
    <string name="message_list_empty">No messages yet</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_download">Download</string>
    <string name="image_save_success">Image saved successfully.</string>
    <string name="profile_full_name">Full name</string>
    <string name="invalid_username2">Username can contain only ASCII letters, digits, underscores and periods.</string>
    <string name="username_unavailable">This username isn\'t available.</string>
    <string name="hyphen">-</string>
    <string name="unknown_user">(unknown)</string>
    <string name="action_share">Share</string>
</resources>
