<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.sakuragasaki46.coriplus.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create"
        android:orderInCategory="101"
        android:title="@string/action_create" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="102"
        android:title="@string/action_profile" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="103"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="109"
        android:title="@string/action_logout" />
</menu>
