<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/profile_header"
    app:layout_constraintTop_toTopOf="parent"
    >

    <TextView
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/messages_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/hyphen" />

            <TextView
                android:id="@+id/messages_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messages_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/hyphen" />

            <TextView
                android:id="@+id/followers_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/hyphen" />

            <TextView
                android:id="@+id/following_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following_text" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/action_buttons">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="0dp"
            android:text="@string/edit_profile"
            android:id="@+id/button_edit_profile"
            android:layout_margin="12dp"
            android:background="@color/colorPrimary"
            android:visibility="gone" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="0dp"
            android:text="@string/action_follow"
            android:id="@+id/button_follow"
            android:layout_margin="12dp"
            android:background="@color/colorPrimary"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>